<resources>
	<string name="app_name">Upcoming</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="no_courses">Looks like you don\'t have any courses!</string>
	<string name="find_courses">Find Courses</string>
	<string name="create_course">Create Course</string>
	<string name="title_activity_assignment_details">Assignment Details</string>
	<string name="complete">Complete</string>
	<string name="delete">Delete</string>
	<string name="default_assignment_name">Assignment name</string>
	<string name="default_due_date_due_time">Due date @ due time</string>
	<string name="default_course">CS 142</string>
	<string name="default_notes">lots of notes</string>
	<string name="default_course_abbrev">CS 142</string>
	<string name="default_time">11:30 AM</string>
	<string name="assignment_name_hint">Assignment Name</string>
	<string name="assignment_due_date_hint">Due Date</string>
	<string name="assignment_due_time_hint">Due Time</string>
	<string name="assignment_course_hint">Course</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="assignment_notes_hint">Notes</string>
	<string name="title_activity_course_details">Course Details</string>
	<string name="course_name_hint">Name</string>
	<string name="course_abbrev_hint">Abbreviation</string>
	<string name="course_color_hint">Color</string>
	<string name="course_notes_hint">Notes</string>
	<string name="title_activity_upcoming_assignments">Upcoming Assignments</string>
	<string name="action_today">Jump to Today</string>
	<string name="action_mark">Mark as Complete</string>
	<string name="my_courses">My Courses</string>
	<string name="upcoming_assignments">Upcoming Assignments</string>
	<string name="completed_assignments">Completed Assignments</string>
	<string name="create_a_course">Create a Course</string>
	<string name="title_activity_completed">Completed Assignments</string>
	<string name="title_section1">Section 1</string>
	<string name="title_section2">Section 2</string>
	<string name="title_section3">Section 3</string>
	
	<string name="action_example">Example action</string>
	<string name="no_completed">Mark some courses as completed to see some assignments here!</string>
	<string name="action_top">Jump to Top</string>
	<string name="action_unmark">Mark as Not Complete</string>
	<string name="its_empty">It\'s empty in here!</string>
	<string name="add_assignment_instructions">Create an assignment by tapping the plus button in the bottom right.
	</string>
</resources>
