<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:showIn="@layout/activity_assignment_details"
	tools:context=".view.AssignmentDetailsActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="20dp"
		>
		
		<TextView
			android:id="@+id/assignment_details_name_tv"
			style="@style/h4"
			android:text="@string/default_assignment_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
		
		<TextView
			android:id="@+id/assignment_details_due_tv"
			style="@style/h5"
			android:text="@string/default_due_date_due_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
		/>
		
		<TextView
			android:id="@+id/assignment_details_course_tv"
			style="@style/h6"
			android:text="@string/default_course"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/readableBlue"
			android:textColor="@color/lightText"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:paddingStart="15dp"
			android:paddingEnd="15dp"
			android:layout_marginTop="10dp"
		/>
		
		<TextView
			android:id="@+id/assignment_details_notes_tv"
			style="@style/body"
			android:text="@string/default_notes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
		
		<LinearLayout
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/complete_button"
				style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
				app:backgroundTint="@color/colorTint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/complete"
				app:icon="@drawable/ic_check"
			/>
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/delete_button"
				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/delete"
				android:layout_marginStart="10dp"
				app:icon="@drawable/ic_trash"
				app:iconTint="@color/colorTint"
				android:textColor="@color/colorTint"
				app:strokeColor="@color/colorTint"
			/>
			
		</LinearLayout>
	
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>