<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".view.EditAssignmentActivity"
	android:padding="20dp"
	>
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/edit_assignment_layout"
	>
		
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:hint="@string/assignment_name_hint"
			android:layout_margin="@dimen/field_margin"
			>
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/name_et"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:hint="@string/assignment_due_date_hint"
				android:layout_margin="@dimen/field_margin"
				android:layout_weight="2"
			>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/due_date_et"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:hint="@string/assignment_due_time_hint"
				android:layout_margin="@dimen/field_margin"
				android:layout_weight="3"
			>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/due_time_et"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
				/>
			
			</com.google.android.material.textfield.TextInputLayout>
		
		</LinearLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:hint="@string/assignment_course_hint"
			android:layout_margin="@dimen/field_margin"
			>
			
			<!--
			<Spinner
				android:id="@+id/course_spinner"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
			-->
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/course_et"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:hint="@string/assignment_notes_hint"
			android:layout_margin="@dimen/field_margin"
			>
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/notes_et"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textMultiLine"
				android:minLines="3"
				android:lines="3"
				android:maxLines="10"
				android:gravity="top|start"
			/>
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<LinearLayout
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="end">
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/cancel_btn"
				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:layout_marginEnd="10dp"
				app:iconTint="@color/colorTint"
				android:textColor="@color/colorTint"
				app:strokeColor="@color/colorTint"
			/>
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/save_btn"
				style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
				app:backgroundTint="@color/colorTint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/save"
			/>
		
		</LinearLayout>
	
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>