<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:showIn="@layout/app_bar_upcoming"
	android:id="@+id/upcoming_layout"
	android:layout_marginLeft="20dp"
	android:layout_marginRight="20dp"
	tools:context=".view.UpcomingActivity">

    <LinearLayout
            android:id="@+id/no_courses_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        <TextView
            android:id="@+id/no_courses_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_courses"
            />

        <Button
            android:id="@+id/find_courses_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_courses"
            />

        <Button
            android:id="@+id/create_course_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_course"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>