<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:showIn="@layout/activity_course_details"
	tools:context=".view.CourseDetailsActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:clipToPadding="false"
	>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:elevation="8dp"
			android:background="#FAFAFA"
		>
			
			<TextView
				android:id="@+id/course_details_name_tv"
				style="@style/h4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingStart="20dp"
				android:paddingEnd="20dp"
				android:layout_marginBottom="20dp"
			/>
			
			<View
				android:id="@+id/course_details_color"
				style="@style/h6"
				android:layout_width="match_parent"
				android:layout_height="5dp"
				android:background="@color/readableBlue"
				android:textColor="@color/lightText"
			/>
			
		</LinearLayout>
		
		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingStart="20dp"
				android:paddingEnd="20dp"
			>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/need_assignments_for_course"
					android:padding="20dp"
					android:gravity="center"
					android:orientation="vertical">
					
					<TextView
						style="@style/h5"
						android:padding="10dp"
						android:textAlignment="center"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/its_empty"
					/>
					
					<TextView
						android:padding="10dp"
						style="@style/h6"
						android:textAlignment="center"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/add_assignment_instructions"
					/>
				
				</LinearLayout>
				
				<TextView
					android:id="@+id/course_details_notes_tv"
					style="@style/body"
					android:text="@string/default_notes"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
				
				<androidx.recyclerview.widget.RecyclerView
					android:paddingBottom="20dp"
					android:id="@+id/course_assignments_rv"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
				/>
			
			</LinearLayout>
		
		
		</androidx.core.widget.NestedScrollView>
	
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>